--- a/gloob/templates/store/home.html
+++ b/gloob/templates/store/home.html
@@ -8,252 +8,303 @@
   <style>
     body {
       background-color: rgb(230, 31, 117);
-    }
-    .product-section {
-      margin-top: 80px;
-    }
-
-    /* Modal background same as home page */
-    .modal-content {
-      background-color: rgb(230, 31, 117);
+      font-family: Arial, sans-serif;
+      padding-top: 80px;
       color: white;
-      border-radius: 10px;
-      padding: 20px;
     }
 
-    .modal-body input {
-      background-color: white;
-      color: black;
-    }
-
-    .modal-body button {
-      background-color: #fff;
+    .btn-login-signup {
       color: rgb(230, 31, 117);
+      background-color: white;
+      margin-left: 5px;
     }
 
-    .modal-body input::placeholder {
-      color: grey;
+    .navbar-center {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+    }
+
+    .product-section {
+      margin-top: 30px;
+    }
+
+    .card {
+      border-radius: 10px;
+    }
+
+    .card-title {
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    .card-text {
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
 
-<center>
-  <h1 class="text-white mt-3">GlooB</h1>
-</center>
-
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">GlooB</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
-        </li>
-      </ul>
-      <form class="d-flex me-3">
-        <input class="form-control me-2" type="search" placeholder="Search">
-        <button class="btn btn-outline-success">Search</button>
+
+    <div class="navbar-center">
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Search</button>
       </form>
-      <!-- Cart Button with count -->
-      <button class="btn btn-warning" type="button">
-        Cart <span id="cart-count" class="badge bg-dark">0</span>
-      </button>
+    </div>
+
+    <div class="d-flex">
+      <a class="btn btn-login-signup" href="#">Login</a>
+      <a class="btn btn-login-signup" href="#">Sign Up</a>
+      <button class="btn btn-warning ms-2">Cart <span id="cart-count" class="badge bg-dark">0</span></button>
     </div>
   </div>
 </nav>
 
+<!-- Products Section -->
 <div class="container product-section">
   <div class="row">
 
-    <!-- Product Cards with Add to Cart -->
+    <!-- Product 1 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-19_at_6.19.26_PM_1.jpg?v=1767094384&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Beetroot Lip Balm</h5>
-          <p class="card-text">₹229.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Beetroot Lip Balm" data-price="229">Add to Cart</button>
+          <p class="card-text">₹229</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Beetroot Lip Balm" data-price="229">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 2 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-20_at_5.00.44_PM.jpg?v=1767094517&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Charcoal Face Wash</h5>
-          <p class="card-text">₹349.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Charcoal Face Wash" data-price="349">Add to Cart</button>
+          <p class="card-text">₹349</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Charcoal Face Wash" data-price="349">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 3 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-20_at_4.04.58_PM.jpg?v=1767094402&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Coffee Scrub</h5>
-          <p class="card-text">₹299.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Coffee Scrub" data-price="299">Add to Cart</button>
+          <p class="card-text">₹299</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Coffee Scrub" data-price="299">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 4 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-17_at_4.22.25_PM.jpg?v=1767094635&width=1600" class="card-img-top">
         <div class="card-body">
-          <h5 class="card-title">GlooB 24K Gold Skin Glow Face Serum</h5>
-          <p class="card-text">₹399.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="24K Gold Face Serum" data-price="399">Add to Cart</button>
+          <h5 class="card-title">24K Gold Skin Glow Serum</h5>
+          <p class="card-text">₹399</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="24K Gold Skin Glow Serum" data-price="399">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 5 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsAppImage2026-01-07at6.54.41PM.jpg?v=1767879662&width=1600" class="card-img-top">
         <div class="card-body">
-          <h5 class="card-title">Anti Ageing & Moisturising Cream</h5>
-          <p class="card-text">₹349.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Anti Ageing Cream" data-price="349">Add to Cart</button>
+          <h5 class="card-title">Anti Ageing Cream</h5>
+          <p class="card-text">₹349</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Anti Ageing Cream" data-price="349">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 6 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsAppImage2026-01-07at7.03.38PM.jpg?v=1767879213&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Foot Crack Cream</h5>
-          <p class="card-text">₹399.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Foot Crack Cream" data-price="399">Add to Cart</button>
+          <p class="card-text">₹399</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Foot Crack Cream" data-price="399">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 7 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsAppImage2025-12-23at2.22.26PM.jpg?v=1766480122&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Korean Beauty Cream</h5>
-          <p class="card-text">₹999.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Korean Beauty Cream" data-price="999">Add to Cart</button>
+          <p class="card-text">₹999</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Korean Beauty Cream" data-price="999">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 8 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-22_at_12.07.46_PM.jpg?v=1767094600&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Onion Hair Oil</h5>
-          <p class="card-text">₹349.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Onion Hair Oil" data-price="349">Add to Cart</button>
+          <p class="card-text">₹349</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Onion Hair Oil" data-price="349">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 9 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-22_at_12.23.10_PM.jpg?v=1767094583&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Onion Shampoo</h5>
-          <p class="card-text">₹299.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Onion Shampoo" data-price="299">Add to Cart</button>
+          <p class="card-text">₹299</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Onion Shampoo" data-price="299">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 10 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
-        <img src="https://www.gloobcare.com/cdn/shop/files/WhatsAppImage2025-12-19at7.00.54PM_3.jpg?v=1767094616&width=1600" class="card-img-top">
+      <div class="card text-dark">
+        <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-19at7.00.54PM_3.jpg?v=1767094616&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Sunscreen Lotion SPF 50</h5>
-          <p class="card-text">₹549.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Sunscreen Lotion SPF 50" data-price="549">Add to Cart</button>
+          <p class="card-text">₹549</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Sunscreen Lotion SPF 50" data-price="549">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 11 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsAppImage2025-12-18at11.34.57AM_1.jpg?v=1767094664&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Sunscreen PA++ SPF 50</h5>
-          <p class="card-text">₹499.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Sunscreen PA++ SPF 50" data-price="499">Add to Cart</button>
+          <p class="card-text">₹499</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Sunscreen PA++ SPF 50" data-price="499">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 12 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsAppImage2026-01-07at6.39.09PM.jpg?v=1767880185&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Hair Growth Serum</h5>
-          <p class="card-text">₹599.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Hair Growth Serum" data-price="599">Add to Cart</button>
+          <p class="card-text">₹599</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Hair Growth Serum" data-price="599">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 13 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-22_at_1.35.26_PM.jpg?v=1767094426&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Multani Mitti</h5>
-          <p class="card-text">₹149.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Multani Mitti" data-price="149">Add to Cart</button>
+          <p class="card-text">₹149</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Multani Mitti" data-price="149">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 14 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-20_at_6.27.24_PM_1.jpg?v=1767094485&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Pure Aloe Vera Gel</h5>
-          <p class="card-text">₹119.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Pure Aloe Vera Gel" data-price="119">Add to Cart</button>
+          <p class="card-text">₹119</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Pure Aloe Vera Gel" data-price="119">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 15 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-19_at_4.34.15_PM_1.jpg?v=1767094497&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Strawberry Lip Balm</h5>
-          <p class="card-text">₹229.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Strawberry Lip Balm" data-price="229">Add to Cart</button>
+          <p class="card-text">₹229</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Strawberry Lip Balm" data-price="229">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 16 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-20_at_4.16.22_PM.jpg?v=1767094444&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Ubtan Scrub</h5>
-          <p class="card-text">₹299.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Ubtan Scrub" data-price="299">Add to Cart</button>
+          <p class="card-text">₹299</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Ubtan Scrub" data-price="299">Add to Cart</button>
         </div>
       </div>
     </div>
 
+    <!-- Product 17 -->
     <div class="col-md-3 mb-4">
-      <div class="card">
+      <div class="card text-dark">
         <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-19_at_2.09.49_PM.jpg?v=1767094532&width=1600" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Under Eye Cream</h5>
-          <p class="card-text">₹299.00</p>
-          <button class="btn btn-primary add-to-cart" data-name="Under Eye Cream" data-price="299">Add to Cart</button>
+          <p class="card-text">₹299</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Under Eye Cream" data-price="299">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 18 -->
+    <div class="col-md-3 mb-4">
+      <div class="card text-dark">
+        <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-21_at_3.05.12_PM.jpg?v=1767094555&width=1600" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Vitamin C Serum</h5>
+          <p class="card-text">₹499</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Vitamin C Serum" data-price="499">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 19 -->
+    <div class="col-md-3 mb-4">
+      <div class="card text-dark">
+        <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-21_at_5.45.21_PM.jpg?v=1767094560&width=1600" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Neem Face Wash</h5>
+          <p class="card-text">₹299</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Neem Face Wash" data-price="299">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 20 -->
+    <div class="col-md-3 mb-4">
+      <div class="card text-dark">
+        <img src="https://www.gloobcare.com/cdn/shop/files/WhatsApp_Image_2025-12-22_at_6.12.55_PM.jpg?v=1767094575&width=1600" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Rose Water Toner</h5>
+          <p class="card-text">₹199</p>
+          <button class="btn btn-primary w-100 add-to-cart" data-name="Rose Water Toner" data-price="199">Add to Cart</button>
         </div>
       </div>
     </div>
@@ -261,27 +312,9 @@
   </div>
 </div>
 
-<!-- Bootstrap Modal for Login -->
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="loginModalLabel">Login</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <form method="post" action="{% url 'login' %}">
-          {% csrf_token %}
-          {{ form.as_p }}
-          <button type="submit" class="btn btn-primary w-100">Login</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-  // Add to Cart functionality
+  // Cart functionality
   let cartCount = 0;
   const cartCountElement = document.getElementById('cart-count');
 
